--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -3,3 +3,62 @@ a {
     color: black;
     display: block;
 }
+
+.container-custom {
+    width: 100%;
+    max-width: 1400px;
+    /* Larghezza completa */
+    margin: 0 auto;
+    /* Centrare */
+    padding: 0 10px;
+    /* Spazi laterali */
+
+    @media (max-width: 500px) {
+        .container-custom {
+            padding: 0 10px;
+        }
+    }
+
+    @media (max-width: 800px) {
+        .container-custom {
+            max-width: 800px;
+            padding: 0 20px;
+
+        }
+    }
+
+    @media (max-width: 1100px) {
+        .container-custom {
+            max-width: 1100px;
+            padding: 0 30px;
+        }
+    }
+
+    @media (max-width: 1400px) {
+        .container-custom {
+            max-width: 1400px;
+            padding: 0 40px;
+        }
+    }
+
+    @media (max-width: 1650px) {
+        .container-custom {
+            max-width: 1650px;
+            padding: 0 50px;
+        }
+    }
+
+    @media (max-width: 1799px) {
+        .container-custom {
+            max-width: 1799px;
+            padding: 0 60px;
+        }
+    }
+
+    @media (min-width: 1800px) {
+        .container-custom {
+            max-width: 1800px;
+            padding: 0 40px;
+        }
+    }
+}
