--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic);
+@import "./_variables.scss";
 
 html {
     scroll-behavior: smooth;
@@ -12,6 +13,10 @@ a {
     text-decoration: none;
     color: black;
     display: block;
+}
+
+.turquoise {
+    color: $color-primary;
 }
 
 .container-custom {
