--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,4 +1,5 @@
 // Import
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
 @import url(https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic);
 @import "./_variables.scss";
 
