--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -8,6 +8,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 * {
     font-family: 'IBM Plex Sans', sans-serif;
 }
